# researcher

./: .env.example  .gitignore  OLLAMA_SETUP.md  README.md  config.yaml  pyproject.toml  run_research.py  test_ollama.py
.github/workflows/: ci.yml
research_agent/: .force-ci  analysis_chain.py  config.py  main.py  model_switcher.py  question_analyzer.py  report_generator.py  web_searcher.py
research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py
